# k3s-cluster-maintenance

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  LICENSE  README.md  SUPPORT.md  ansible.cfg  hosts.yml.example  install-collections.sh  maintenance.yml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: FUNDING.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug.yml  enhancement.yml
.github/renovate/: ansible.json5  devcontainers.json5  labels.json  semanticCommits.json5
.github/workflows/: ansible-lint.yml  devcontainer-smoke.yml  release.yml  scorecard.yml
collections/: requirements.yml
group_vars/k3s_masters/: main.yml
group_vars/k3s_workers/: main.yml
group_vars/os_debian/: main.yml
group_vars/os_redhat/: main.yml
roles/k3s_node_maintenance/: README.md
roles/k3s_node_maintenance/defaults/: main.yml
roles/k3s_node_maintenance/handlers/: main.yml
roles/k3s_node_maintenance/meta/: main.yml
roles/k3s_node_maintenance/tasks/: cluster_preparation.yml  cluster_restoration.yml  debian_updates.yml  final_validation.yml  longhorn_validation.yml  main.yml  package_checks.yml  package_updates.yml  prerequisites.yml  reboot_handling.yml  redhat_updates.yml  resume_after_reboot.yml
